--- a/backend/lang/de.json
+++ b/backend/lang/de.json
@@ -283,7 +283,7 @@
     "Attendee does not belong to this check-in list": "Teilnehmer gehört nicht zu dieser Eincheckliste",
     "Attendee :attendee_name\\'s ticket is cancelled": "Das Ticket von Teilnehmer :attendee_name wurde storniert",
     "Check-in list is not active yet": "Die Check-in-Liste ist noch nicht aktiv",
-    "The number of attendees does not match the number of tickets in the order": "Die Anzahl der Teilnehmer stimmt nicht mit der Anzahl der Tickets in der Bestellung überein.",
+    "The number of attendees does not match the number of tickets in the order": "Die Anzahl der Teilnehmer stimmt nicht mit der Anzahl der Tickets überein",
     "Product is required": "Produkt ist erforderlich.",
     "Product price is required": "Produktpreis ist erforderlich.",
     "Please select at least one product.": "Bitte wählen Sie mindestens ein Produkt aus.",
@@ -420,5 +420,75 @@
     "Total Amount": "Gesamtbetrag",
     "For any queries, please contact us at": "Bei Fragen kontaktieren Sie uns bitte unter",
     "Tax Information": "Steuerinformationen",
-    "The number of attendees does not match the number of tickets in the order": "Die Anzahl der Teilnehmer stimmt nicht mit der Anzahl der Tickets überein"
+    "Sales Ascending": "Verkäufe aufsteigend",
+    "Sales Descending": "Verkäufe absteigend",
+    "Revenue Ascending": "Umsatz aufsteigend",
+    "Revenue Descending": "Umsatz absteigend",
+    "Social": "Soziales",
+    "Food & Drink": "Essen & Trinken",
+    "Charity": "Wohltätigkeit",
+    "Music": "Musik",
+    "Art": "Kunst",
+    "Comedy": "Comedy",
+    "Theater": "Theater",
+    "Business": "Geschäftlich",
+    "Tech": "Technologie",
+    "Education": "Bildung",
+    "Workshop": "Workshop",
+    "Sports": "Sport",
+    "Festival": "Festival",
+    "Nightlife": "Nachtleben",
+    "Other": "Sonstiges",
+    "Name": "Name",
+    "Code": "Code",
+    "Total Sales": "Gesamtverkäufe",
+    "Total Sales Gross": "Bruttogesamtverkäufe",
+    "Updated At": "Aktualisiert am",
+    "Question": "Frage",
+    "Answer": "Antwort",
+    "Order ID": "Bestell-ID",
+    "Order Email": "Bestell-E-Mail",
+    "Attendee Name": "Teilnehmername",
+    "Attendee Email": "Teilnehmer-E-Mail",
+    "Product": "Produkt",
+    "Order URL": "Bestell-URL",
+    "Attendee Answers": "Teilnehmerantworten",
+    "Order Name": "Bestellname",
+    "Order Answers": "Bestellantworten",
+    "Product Answers": "Produktantworten",
+    "Payment Provider": "Zahlungsanbieter",
+    "Invalid invite token": "Ungültiger Einladungscode",
+    "Affiliate not found": "Partner nicht gefunden",
+    "Organizer with ID :organizerId is not live and user is not authenticated": "Veranstalter mit ID :organizerId ist nicht aktiv und Benutzer ist nicht authentifiziert",
+    "Message sent successfully": "Nachricht erfolgreich gesendet",
+    "Your email has been successfully verified!": "Ihre E-Mail wurde erfolgreich verifiziert!",
+    "The image must be at least 600 pixels wide and 50 pixels tall, and no more than 4000 pixels wide and 4000 pixels tall.": "Das Bild muss mindestens 600 Pixel breit und 50 Pixel hoch sein und darf maximal 4000 Pixel breit und 4000 Pixel hoch sein.",
+    "The image must be at least :minWidth x :minHeight pixels.": "Das Bild muss mindestens :minWidth x :minHeight Pixel groß sein.",
+    "The entity ID is required when type is provided.": "Die Entitäts-ID ist erforderlich, wenn der Typ angegeben wird.",
+    "The type is required when entity ID is provided.": "Der Typ ist erforderlich, wenn die Entitäts-ID angegeben wird.",
+    "Your confirmation code for :app_name is :code": "Ihr Bestätigungscode für :app_name lautet :code",
+    "New message from :name": "Neue Nachricht von :name",
+    "An affiliate with this code already exists for this event": "Ein Partner mit diesem Code existiert bereits für diese Veranstaltung",
+    "New password must be different from the old password.": "Das neue Passwort muss sich vom alten Passwort unterscheiden.",
+    "Due to issues with spam, you must contact us to enable your account for sending messages. ' .\n                    'Please contact us at :email": "Aufgrund von Spam-Problemen müssen Sie uns kontaktieren, um Ihr Konto für das Senden von Nachrichten zu aktivieren. Bitte kontaktieren Sie uns unter :email",
+    "Sorry, is expired or not in a valid state.": "Entschuldigung, ist abgelaufen oder nicht in einem gültigen Zustand.",
+    "Organizer not found": "Veranstalter nicht gefunden",
+    "You must verify your account before you can update an organizer\\'s status.\n                You can resend the confirmation by visiting your profile page.": "Sie müssen Ihr Konto verifizieren, bevor Sie den Status eines Veranstalters aktualisieren können. Sie können die Bestätigung über Ihre Profilseite erneut senden.",
+    "Your email address has already been verified.": "Ihre E-Mail-Adresse wurde bereits verifiziert.",
+    "The verification code is invalid or has expired.": "Der Bestätigungscode ist ungültig oder abgelaufen.",
+    "Job not found": "Auftrag nicht gefunden",
+    "Export file not found": "Exportdatei nicht gefunden",
+    "Job completed successfully": "Auftrag erfolgreich abgeschlossen",
+    "Job is still in progress": "Auftrag wird noch bearbeitet",
+    "Email Subject": "E-Mail-Betreff",
+    "© :year :app_name. All rights reserved.": "© :year :app_name. Alle Rechte vorbehalten.",
+    "Need help?": "Benötigen Sie Hilfe?",
+    "Contact Support": "Support kontaktieren",
+    "Additional Information": "Zusätzliche Informationen",
+    "If you have any questions or need assistance, please contact": "Bei Fragen oder wenn Sie Hilfe benötigen, kontaktieren Sie bitte",
+    "Hello :name": "Hallo :name",
+    "You have received a new message from": "Sie haben eine neue Nachricht erhalten von",
+    "Reply to :name": "Antworten an :name",
+    "This message was sent via your organizer contact form.": "Diese Nachricht wurde über Ihr Veranstalter-Kontaktformular gesendet.",
+    "Your email confirmation code is:": "Ihr E-Mail-Bestätigungscode lautet:"
 }
