--- a/backend/lang/es.json
+++ b/backend/lang/es.json
@@ -419,5 +419,76 @@
     "Total Service Fee": "Tarifa total del servicio",
     "Total Amount": "Monto total",
     "For any queries, please contact us at": "Para cualquier consulta, por favor contáctanos en",
-    "Tax Information": "Información fiscal"
+    "Tax Information": "Información fiscal",
+    "Sales Ascending": "Ventas ascendente",
+    "Sales Descending": "Ventas descendente",
+    "Revenue Ascending": "Ingresos ascendente",
+    "Revenue Descending": "Ingresos descendente",
+    "Social": "Social",
+    "Food & Drink": "Comida y bebida",
+    "Charity": "Caridad",
+    "Music": "Música",
+    "Art": "Arte",
+    "Comedy": "Comedia",
+    "Theater": "Teatro",
+    "Business": "Negocios",
+    "Tech": "Tecnología",
+    "Education": "Educación",
+    "Workshop": "Taller",
+    "Sports": "Deportes",
+    "Festival": "Festival",
+    "Nightlife": "Vida nocturna",
+    "Other": "Otro",
+    "Name": "Nombre",
+    "Code": "Código",
+    "Total Sales": "Ventas totales",
+    "Total Sales Gross": "Ventas brutas totales",
+    "Updated At": "Actualizado el",
+    "Question": "Pregunta",
+    "Answer": "Respuesta",
+    "Order ID": "ID de pedido",
+    "Order Email": "Email del pedido",
+    "Attendee Name": "Nombre del asistente",
+    "Attendee Email": "Email del asistente",
+    "Product": "Producto",
+    "Order URL": "URL del pedido",
+    "Attendee Answers": "Respuestas del asistente",
+    "Order Name": "Nombre del pedido",
+    "Order Answers": "Respuestas del pedido",
+    "Product Answers": "Respuestas del producto",
+    "Payment Provider": "Proveedor de pago",
+    "Invalid invite token": "Token de invitación inválido",
+    "Affiliate not found": "Afiliado no encontrado",
+    "Organizer with ID :organizerId is not live and user is not authenticated": "El organizador con ID :organizerId no está activo y el usuario no está autenticado",
+    "Message sent successfully": "Mensaje enviado exitosamente",
+    "Your email has been successfully verified!": "¡Tu email ha sido verificado exitosamente!",
+    "The image must be at least 600 pixels wide and 50 pixels tall, and no more than 4000 pixels wide and 4000 pixels tall.": "La imagen debe tener al menos 600 píxeles de ancho y 50 píxeles de alto, y no más de 4000 píxeles de ancho y 4000 píxeles de alto.",
+    "The image must be at least :minWidth x :minHeight pixels.": "La imagen debe tener al menos :minWidth x :minHeight píxeles.",
+    "The entity ID is required when type is provided.": "El ID de entidad es obligatorio cuando se proporciona el tipo.",
+    "The type is required when entity ID is provided.": "El tipo es obligatorio cuando se proporciona el ID de entidad.",
+    "Your confirmation code for :app_name is :code": "Tu código de confirmación para :app_name es :code",
+    "New message from :name": "Nuevo mensaje de :name",
+    "An affiliate with this code already exists for this event": "Ya existe un afiliado con este código para este evento",
+    "New password must be different from the old password.": "La nueva contraseña debe ser diferente de la contraseña anterior.",
+    "Due to issues with spam, you must contact us to enable your account for sending messages. ' .\n                    'Please contact us at :email": "Debido a problemas con el spam, debes contactarnos para habilitar tu cuenta para enviar mensajes. Por favor contáctanos en :email",
+    "Sorry, is expired or not in a valid state.": "Lo sentimos, ha expirado o no está en un estado válido.",
+    "Organizer not found": "Organizador no encontrado",
+    "You must verify your account before you can update an organizer\\'s status.\n                You can resend the confirmation by visiting your profile page.": "Debes verificar tu cuenta antes de poder actualizar el estado de un organizador. Puedes reenviar la confirmación visitando tu página de perfil.",
+    "Your email address has already been verified.": "Tu dirección de email ya ha sido verificada.",
+    "The verification code is invalid or has expired.": "El código de verificación es inválido o ha expirado.",
+    "Job not found": "Trabajo no encontrado",
+    "Export file not found": "Archivo de exportación no encontrado",
+    "Job completed successfully": "Trabajo completado exitosamente",
+    "Job is still in progress": "El trabajo aún está en progreso",
+    "Email Subject": "Asunto del email",
+    "© :year :app_name. All rights reserved.": "© :year :app_name. Todos los derechos reservados.",
+    "Need help?": "¿Necesitas ayuda?",
+    "Contact Support": "Contactar soporte",
+    "Additional Information": "Información adicional",
+    "If you have any questions or need assistance, please contact": "Si tienes alguna pregunta o necesitas ayuda, por favor contacta",
+    "Hello :name": "Hola :name",
+    "You have received a new message from": "Has recibido un nuevo mensaje de",
+    "Reply to :name": "Responder a :name",
+    "This message was sent via your organizer contact form.": "Este mensaje fue enviado a través de tu formulario de contacto de organizador.",
+    "Your email confirmation code is:": "Tu código de confirmación de email es:"
 }
