--- a/backend/lang/fr.json
+++ b/backend/lang/fr.json
@@ -419,5 +419,76 @@
     "Total Service Fee": "Frais de service totaux",
     "Total Amount": "Montant total",
     "For any queries, please contact us at": "Pour toute question, veuillez nous contacter à",
-    "Tax Information": "Informations fiscales"
+    "Tax Information": "Informations fiscales",
+    "Sales Ascending": "Ventes croissant",
+    "Sales Descending": "Ventes décroissant",
+    "Revenue Ascending": "Revenus croissant",
+    "Revenue Descending": "Revenus décroissant",
+    "Social": "Social",
+    "Food & Drink": "Nourriture et boissons",
+    "Charity": "Charité",
+    "Music": "Musique",
+    "Art": "Art",
+    "Comedy": "Comédie",
+    "Theater": "Théâtre",
+    "Business": "Affaires",
+    "Tech": "Technologie",
+    "Education": "Éducation",
+    "Workshop": "Atelier",
+    "Sports": "Sports",
+    "Festival": "Festival",
+    "Nightlife": "Vie nocturne",
+    "Other": "Autre",
+    "Name": "Nom",
+    "Code": "Code",
+    "Total Sales": "Ventes totales",
+    "Total Sales Gross": "Ventes brutes totales",
+    "Updated At": "Mis à jour le",
+    "Question": "Question",
+    "Answer": "Réponse",
+    "Order ID": "ID de commande",
+    "Order Email": "E-mail de commande",
+    "Attendee Name": "Nom du participant",
+    "Attendee Email": "E-mail du participant",
+    "Product": "Produit",
+    "Order URL": "URL de commande",
+    "Attendee Answers": "Réponses du participant",
+    "Order Name": "Nom de commande",
+    "Order Answers": "Réponses de commande",
+    "Product Answers": "Réponses du produit",
+    "Payment Provider": "Fournisseur de paiement",
+    "Invalid invite token": "Jeton d'invitation invalide",
+    "Affiliate not found": "Affilié non trouvé",
+    "Organizer with ID :organizerId is not live and user is not authenticated": "L'organisateur avec l'ID :organizerId n'est pas actif et l'utilisateur n'est pas authentifié",
+    "Message sent successfully": "Message envoyé avec succès",
+    "Your email has been successfully verified!": "Votre e-mail a été vérifié avec succès !",
+    "The image must be at least 600 pixels wide and 50 pixels tall, and no more than 4000 pixels wide and 4000 pixels tall.": "L'image doit faire au moins 600 pixels de large et 50 pixels de haut, et ne pas dépasser 4000 pixels de large et 4000 pixels de haut.",
+    "The image must be at least :minWidth x :minHeight pixels.": "L'image doit faire au moins :minWidth x :minHeight pixels.",
+    "The entity ID is required when type is provided.": "L'ID d'entité est requis lorsque le type est fourni.",
+    "The type is required when entity ID is provided.": "Le type est requis lorsque l'ID d'entité est fourni.",
+    "Your confirmation code for :app_name is :code": "Votre code de confirmation pour :app_name est :code",
+    "New message from :name": "Nouveau message de :name",
+    "An affiliate with this code already exists for this event": "Un affilié avec ce code existe déjà pour cet événement",
+    "New password must be different from the old password.": "Le nouveau mot de passe doit être différent de l'ancien mot de passe.",
+    "Due to issues with spam, you must contact us to enable your account for sending messages. ' .\n                    'Please contact us at :email": "En raison de problèmes de spam, vous devez nous contacter pour activer l'envoi de messages sur votre compte. Veuillez nous contacter à :email",
+    "Sorry, is expired or not in a valid state.": "Désolé, est expiré ou n'est pas dans un état valide.",
+    "Organizer not found": "Organisateur non trouvé",
+    "You must verify your account before you can update an organizer\\'s status.\n                You can resend the confirmation by visiting your profile page.": "Vous devez vérifier votre compte avant de pouvoir mettre à jour le statut d'un organisateur. Vous pouvez renvoyer la confirmation en visitant votre page de profil.",
+    "Your email address has already been verified.": "Votre adresse e-mail a déjà été vérifiée.",
+    "The verification code is invalid or has expired.": "Le code de vérification est invalide ou a expiré.",
+    "Job not found": "Tâche non trouvée",
+    "Export file not found": "Fichier d'export non trouvé",
+    "Job completed successfully": "Tâche terminée avec succès",
+    "Job is still in progress": "La tâche est toujours en cours",
+    "Email Subject": "Objet de l'e-mail",
+    "© :year :app_name. All rights reserved.": "© :year :app_name. Tous droits réservés.",
+    "Need help?": "Besoin d'aide ?",
+    "Contact Support": "Contacter le support",
+    "Additional Information": "Informations supplémentaires",
+    "If you have any questions or need assistance, please contact": "Si vous avez des questions ou besoin d'aide, veuillez contacter",
+    "Hello :name": "Bonjour :name",
+    "You have received a new message from": "Vous avez reçu un nouveau message de",
+    "Reply to :name": "Répondre à :name",
+    "This message was sent via your organizer contact form.": "Ce message a été envoyé via votre formulaire de contact d'organisateur.",
+    "Your email confirmation code is:": "Votre code de confirmation e-mail est :"
 }
