--- a/backend/lang/it.json
+++ b/backend/lang/it.json
@@ -419,5 +419,77 @@
     "Total Service Fee": "Commissioni totali del servizio",
     "Total Amount": "Importo totale",
     "For any queries, please contact us at": "Per qualsiasi domanda, contattateci su",
-    "Tax Information": "Informazioni fiscali"
+    "Tax Information": "Informazioni fiscali",
+    "Sales Ascending": "Vendite crescente",
+    "Sales Descending": "Vendite decrescente",
+    "Revenue Ascending": "Ricavi crescente",
+    "Revenue Descending": "Ricavi decrescente",
+    "Social": "Sociale",
+    "Food & Drink": "Cibo e bevande",
+    "Charity": "Beneficenza",
+    "Music": "Musica",
+    "Art": "Arte",
+    "Comedy": "Commedia",
+    "Theater": "Teatro",
+    "Business": "Business",
+    "Tech": "Tecnologia",
+    "Education": "Educazione",
+    "Workshop": "Workshop",
+    "Sports": "Sport",
+    "Festival": "Festival",
+    "Nightlife": "Vita notturna",
+    "Other": "Altro",
+    "Name": "Nome",
+    "Code": "Codice",
+    "Total Sales": "Vendite totali",
+    "Total Sales Gross": "Vendite lorde totali",
+    "Updated At": "Aggiornato il",
+    "Question": "Domanda",
+    "Answer": "Risposta",
+    "Order ID": "ID ordine",
+    "Order Email": "Email ordine",
+    "Attendee Name": "Nome partecipante",
+    "Attendee Email": "Email partecipante",
+    "Product": "Prodotto",
+    "Order URL": "URL ordine",
+    "Attendee Answers": "Risposte partecipante",
+    "Order Name": "Nome ordine",
+    "Order Answers": "Risposte ordine",
+    "Product Answers": "Risposte prodotto",
+    "Payment Provider": "Fornitore di pagamento",
+    "Invalid invite token": "Token di invito non valido",
+    "Affiliate not found": "Affiliato non trovato",
+    "Organizer with ID :organizerId is not live and user is not authenticated": "L'organizzatore con ID :organizerId non è attivo e l'utente non è autenticato",
+    "Message sent successfully": "Messaggio inviato con successo",
+    "Your email has been successfully verified!": "La tua email è stata verificata con successo!",
+    "The image must be at least 600 pixels wide and 50 pixels tall, and no more than 4000 pixels wide and 4000 pixels tall.": "L'immagine deve essere almeno 600 pixel di larghezza e 50 pixel di altezza, e non più di 4000 pixel di larghezza e 4000 pixel di altezza.",
+    "The image must be at least :minWidth x :minHeight pixels.": "L'immagine deve essere almeno :minWidth x :minHeight pixel.",
+    "The entity ID is required when type is provided.": "L'ID entità è obbligatorio quando viene fornito il tipo.",
+    "The type is required when entity ID is provided.": "Il tipo è obbligatorio quando viene fornito l'ID entità.",
+    "Your confirmation code for :app_name is :code": "Il tuo codice di conferma per :app_name è :code",
+    "New message from :name": "Nuovo messaggio da :name",
+    "An affiliate with this code already exists for this event": "Un affiliato con questo codice esiste già per questo evento",
+    "New password must be different from the old password.": "La nuova password deve essere diversa dalla password precedente.",
+    "Due to issues with spam, you must contact us to enable your account for sending messages. ' .\n                    'Please contact us at :email": "A causa di problemi con lo spam, devi contattarci per abilitare l'invio di messaggi dal tuo account. Contattaci all'indirizzo :email",
+    "Sorry, is expired or not in a valid state.": "Spiacenti, è scaduto o non è in uno stato valido.",
+    "Organizer not found": "Organizzatore non trovato",
+    "You must verify your account before you can update an organizer\\'s status.\n                You can resend the confirmation by visiting your profile page.": "Devi verificare il tuo account prima di poter aggiornare lo stato di un organizzatore. Puoi reinviare la conferma visitando la tua pagina profilo.",
+    "Your email address has already been verified.": "Il tuo indirizzo email è già stato verificato.",
+    "The verification code is invalid or has expired.": "Il codice di verifica non è valido o è scaduto.",
+    "You cannot delete this product category because it contains the following products: :products. These products are linked to existing orders. Please move the :product_name to another category before attempting to delete this one.": "Non puoi eliminare questa categoria di prodotti perché contiene i seguenti prodotti: :products. Questi prodotti sono collegati a ordini esistenti. Sposta :product_name in un'altra categoria prima di tentare di eliminare questa.",
+    "Job not found": "Lavoro non trovato",
+    "Export file not found": "File di esportazione non trovato",
+    "Job completed successfully": "Lavoro completato con successo",
+    "Job is still in progress": "Il lavoro è ancora in corso",
+    "Email Subject": "Oggetto email",
+    "© :year :app_name. All rights reserved.": "© :year :app_name. Tutti i diritti riservati.",
+    "Need help?": "Hai bisogno di aiuto?",
+    "Contact Support": "Contatta il supporto",
+    "Additional Information": "Informazioni aggiuntive",
+    "If you have any questions or need assistance, please contact": "Se hai domande o hai bisogno di assistenza, contatta",
+    "Hello :name": "Ciao :name",
+    "You have received a new message from": "Hai ricevuto un nuovo messaggio da",
+    "Reply to :name": "Rispondi a :name",
+    "This message was sent via your organizer contact form.": "Questo messaggio è stato inviato tramite il tuo modulo di contatto organizzatore.",
+    "Your email confirmation code is:": "Il tuo codice di conferma email è:"
 }
