--- a/backend/lang/pt-br.json
+++ b/backend/lang/pt-br.json
@@ -419,5 +419,76 @@
     "Total Service Fee": "Taxa total de serviço",
     "Total Amount": "Valor total",
     "For any queries, please contact us at": "Para qualquer dúvida, entre em contato conosco em",
-    "Tax Information": "Informações fiscais"
+    "Tax Information": "Informações fiscais",
+    "Sales Ascending": "Vendas crescente",
+    "Sales Descending": "Vendas decrescente",
+    "Revenue Ascending": "Receita crescente",
+    "Revenue Descending": "Receita decrescente",
+    "Social": "Social",
+    "Food & Drink": "Comida e bebida",
+    "Charity": "Caridade",
+    "Music": "Música",
+    "Art": "Arte",
+    "Comedy": "Comédia",
+    "Theater": "Teatro",
+    "Business": "Negócios",
+    "Tech": "Tecnologia",
+    "Education": "Educação",
+    "Workshop": "Workshop",
+    "Sports": "Desporto",
+    "Festival": "Festival",
+    "Nightlife": "Vida noturna",
+    "Other": "Outro",
+    "Name": "Nome",
+    "Code": "Código",
+    "Total Sales": "Vendas totais",
+    "Total Sales Gross": "Vendas brutas totais",
+    "Updated At": "Atualizado em",
+    "Question": "Pergunta",
+    "Answer": "Resposta",
+    "Order ID": "ID do pedido",
+    "Order Email": "Email do pedido",
+    "Attendee Name": "Nome do participante",
+    "Attendee Email": "Email do participante",
+    "Product": "Produto",
+    "Order URL": "URL do pedido",
+    "Attendee Answers": "Respostas do participante",
+    "Order Name": "Nome do pedido",
+    "Order Answers": "Respostas do pedido",
+    "Product Answers": "Respostas do produto",
+    "Payment Provider": "Fornecedor de pagamento",
+    "Invalid invite token": "Token de convite inválido",
+    "Affiliate not found": "Afiliado não encontrado",
+    "Organizer with ID :organizerId is not live and user is not authenticated": "O organizador com ID :organizerId não está ativo e o utilizador não está autenticado",
+    "Message sent successfully": "Mensagem enviada com sucesso",
+    "Your email has been successfully verified!": "O seu email foi verificado com sucesso!",
+    "The image must be at least 600 pixels wide and 50 pixels tall, and no more than 4000 pixels wide and 4000 pixels tall.": "A imagem deve ter pelo menos 600 pixels de largura e 50 pixels de altura, e não mais de 4000 pixels de largura e 4000 pixels de altura.",
+    "The image must be at least :minWidth x :minHeight pixels.": "A imagem deve ter pelo menos :minWidth x :minHeight pixels.",
+    "The entity ID is required when type is provided.": "O ID da entidade é obrigatório quando o tipo é fornecido.",
+    "The type is required when entity ID is provided.": "O tipo é obrigatório quando o ID da entidade é fornecido.",
+    "Your confirmation code for :app_name is :code": "O seu código de confirmação para :app_name é :code",
+    "New message from :name": "Nova mensagem de :name",
+    "An affiliate with this code already exists for this event": "Um afiliado com este código já existe para este evento",
+    "New password must be different from the old password.": "A nova palavra-passe deve ser diferente da palavra-passe antiga.",
+    "Due to issues with spam, you must contact us to enable your account for sending messages. ' .\n                    'Please contact us at :email": "Devido a problemas com spam, deve contactar-nos para ativar o envio de mensagens na sua conta. Por favor contacte-nos em :email",
+    "Sorry, is expired or not in a valid state.": "Desculpe, expirou ou não está num estado válido.",
+    "Organizer not found": "Organizador não encontrado",
+    "You must verify your account before you can update an organizer\\'s status.\n                You can resend the confirmation by visiting your profile page.": "Deve verificar a sua conta antes de poder atualizar o estado de um organizador. Pode reenviar a confirmação visitando a sua página de perfil.",
+    "Your email address has already been verified.": "O seu endereço de email já foi verificado.",
+    "The verification code is invalid or has expired.": "O código de verificação é inválido ou expirou.",
+    "Job not found": "Tarefa não encontrada",
+    "Export file not found": "Ficheiro de exportação não encontrado",
+    "Job completed successfully": "Tarefa concluída com sucesso",
+    "Job is still in progress": "A tarefa ainda está em progresso",
+    "Email Subject": "Assunto do email",
+    "© :year :app_name. All rights reserved.": "© :year :app_name. Todos os direitos reservados.",
+    "Need help?": "Precisa de ajuda?",
+    "Contact Support": "Contactar suporte",
+    "Additional Information": "Informações adicionais",
+    "If you have any questions or need assistance, please contact": "Se tiver alguma pergunta ou precisar de assistência, por favor contacte",
+    "Hello :name": "Olá :name",
+    "You have received a new message from": "Recebeu uma nova mensagem de",
+    "Reply to :name": "Responder a :name",
+    "This message was sent via your organizer contact form.": "Esta mensagem foi enviada através do seu formulário de contacto de organizador.",
+    "Your email confirmation code is:": "O seu código de confirmação de email é:"
 }
