--- a/backend/lang/ru.json
+++ b/backend/lang/ru.json
@@ -434,5 +434,76 @@
     "Total Service Fee": "",
     "Total Amount": "",
     "For any queries, please contact us at": "",
-    "Tax Information": ""
+    "Tax Information": "",
+    "Sales Ascending": "",
+    "Sales Descending": "",
+    "Revenue Ascending": "",
+    "Revenue Descending": "",
+    "Social": "",
+    "Food & Drink": "",
+    "Charity": "",
+    "Music": "",
+    "Art": "",
+    "Comedy": "",
+    "Theater": "",
+    "Business": "",
+    "Tech": "",
+    "Education": "",
+    "Workshop": "",
+    "Sports": "",
+    "Festival": "",
+    "Nightlife": "",
+    "Other": "",
+    "Name": "",
+    "Code": "",
+    "Total Sales": "",
+    "Total Sales Gross": "",
+    "Updated At": "",
+    "Question": "",
+    "Answer": "",
+    "Order ID": "",
+    "Order Email": "",
+    "Attendee Name": "",
+    "Attendee Email": "",
+    "Product": "",
+    "Order URL": "",
+    "Attendee Answers": "",
+    "Order Name": "",
+    "Order Answers": "",
+    "Product Answers": "",
+    "Payment Provider": "",
+    "Invalid invite token": "",
+    "Affiliate not found": "",
+    "Organizer with ID :organizerId is not live and user is not authenticated": "",
+    "Message sent successfully": "",
+    "Your email has been successfully verified!": "",
+    "The image must be at least 600 pixels wide and 50 pixels tall, and no more than 4000 pixels wide and 4000 pixels tall.": "",
+    "The image must be at least :minWidth x :minHeight pixels.": "",
+    "The entity ID is required when type is provided.": "",
+    "The type is required when entity ID is provided.": "",
+    "Your confirmation code for :app_name is :code": "",
+    "New message from :name": "",
+    "An affiliate with this code already exists for this event": "",
+    "New password must be different from the old password.": "",
+    "Due to issues with spam, you must contact us to enable your account for sending messages. ' .\n                    'Please contact us at :email": "",
+    "Sorry, is expired or not in a valid state.": "",
+    "Organizer not found": "",
+    "You must verify your account before you can update an organizer\\'s status.\n                You can resend the confirmation by visiting your profile page.": "",
+    "Your email address has already been verified.": "",
+    "The verification code is invalid or has expired.": "",
+    "Job not found": "",
+    "Export file not found": "",
+    "Job completed successfully": "",
+    "Job is still in progress": "",
+    "Email Subject": "",
+    "© :year :app_name. All rights reserved.": "",
+    "Need help?": "",
+    "Contact Support": "",
+    "Additional Information": "",
+    "If you have any questions or need assistance, please contact": "",
+    "Hello :name": "",
+    "You have received a new message from": "",
+    "Reply to :name": "",
+    "This message was sent via your organizer contact form.": "",
+    "Your email confirmation code is:": ""
 }
