--- a/backend/lang/vi.json
+++ b/backend/lang/vi.json
@@ -382,5 +382,76 @@
     "For any queries, please contact us at": "Mọi thắc mắc, vui lòng liên hệ với chúng tôi tại",
     "Tax Information": "Thông tin thuế",
     "All rights reserved.": "Đã đăng ký bản quyền.",
-    "Congratulations 🎉": "Chúc mừng 🎉"
+    "Congratulations 🎉": "Chúc mừng 🎉",
+    "Sales Ascending": "Doanh số tăng dần",
+    "Sales Descending": "Doanh số giảm dần",
+    "Revenue Ascending": "Doanh thu tăng dần",
+    "Revenue Descending": "Doanh thu giảm dần",
+    "Social": "Xã hội",
+    "Food & Drink": "Ẩm thực",
+    "Charity": "Từ thiện",
+    "Music": "Âm nhạc",
+    "Art": "Nghệ thuật",
+    "Comedy": "Hài kịch",
+    "Theater": "Sân khấu",
+    "Business": "Kinh doanh",
+    "Tech": "Công nghệ",
+    "Education": "Giáo dục",
+    "Workshop": "Hội thảo",
+    "Sports": "Thể thao",
+    "Festival": "Lễ hội",
+    "Nightlife": "Cuộc sống về đêm",
+    "Other": "Khác",
+    "Name": "Tên",
+    "Code": "Mã",
+    "Total Sales": "Tổng doanh số",
+    "Total Sales Gross": "Tổng doanh số gộp",
+    "Updated At": "Cập nhật lúc",
+    "Question": "Câu hỏi",
+    "Answer": "Câu trả lời",
+    "Order ID": "ID đơn hàng",
+    "Order Email": "Email đơn hàng",
+    "Attendee Name": "Tên người tham dự",
+    "Attendee Email": "Email người tham dự",
+    "Product": "Sản phẩm",
+    "Order URL": "URL đơn hàng",
+    "Attendee Answers": "Câu trả lời của người tham dự",
+    "Order Name": "Tên đơn hàng",
+    "Order Answers": "Câu trả lời đơn hàng",
+    "Product Answers": "Câu trả lời sản phẩm",
+    "Payment Provider": "Nhà cung cấp thanh toán",
+    "Invalid invite token": "Token mời không hợp lệ",
+    "Affiliate not found": "Không tìm thấy đối tác",
+    "Organizer with ID :organizerId is not live and user is not authenticated": "Nhà tổ chức với ID :organizerId không hoạt động và người dùng chưa xác thực",
+    "Message sent successfully": "Gửi tin nhắn thành công",
+    "Your email has been successfully verified!": "Email của bạn đã được xác thực thành công!",
+    "The image must be at least 600 pixels wide and 50 pixels tall, and no more than 4000 pixels wide and 4000 pixels tall.": "Hình ảnh phải có ít nhất 600 pixel chiều rộng và 50 pixel chiều cao, và không quá 4000 pixel chiều rộng và 4000 pixel chiều cao.",
+    "The image must be at least :minWidth x :minHeight pixels.": "Hình ảnh phải có ít nhất :minWidth x :minHeight pixel.",
+    "The entity ID is required when type is provided.": "ID thực thể là bắt buộc khi loại được cung cấp.",
+    "The type is required when entity ID is provided.": "Loại là bắt buộc khi ID thực thể được cung cấp.",
+    "Your confirmation code for :app_name is :code": "Mã xác nhận của bạn cho :app_name là :code",
+    "New message from :name": "Tin nhắn mới từ :name",
+    "An affiliate with this code already exists for this event": "Một đối tác với mã này đã tồn tại cho sự kiện này",
+    "New password must be different from the old password.": "Mật khẩu mới phải khác với mật khẩu cũ.",
+    "Due to issues with spam, you must contact us to enable your account for sending messages. ' .\n                    'Please contact us at :email": "Do vấn đề spam, bạn phải liên hệ với chúng tôi để kích hoạt tài khoản gửi tin nhắn. Vui lòng liên hệ tại :email",
+    "Sorry, is expired or not in a valid state.": "Xin lỗi, đã hết hạn hoặc không ở trạng thái hợp lệ.",
+    "Organizer not found": "Không tìm thấy nhà tổ chức",
+    "You must verify your account before you can update an organizer\\'s status.\n                You can resend the confirmation by visiting your profile page.": "Bạn phải xác thực tài khoản trước khi có thể cập nhật trạng thái nhà tổ chức. Bạn có thể gửi lại xác nhận bằng cách truy cập trang hồ sơ của bạn.",
+    "Your email address has already been verified.": "Địa chỉ email của bạn đã được xác thực.",
+    "The verification code is invalid or has expired.": "Mã xác thực không hợp lệ hoặc đã hết hạn.",
+    "Job not found": "Không tìm thấy công việc",
+    "Export file not found": "Không tìm thấy tệp xuất",
+    "Job completed successfully": "Công việc hoàn thành thành công",
+    "Job is still in progress": "Công việc vẫn đang tiến hành",
+    "Email Subject": "Chủ đề email",
+    "© :year :app_name. All rights reserved.": "© :year :app_name. Mọi quyền được bảo lưu.",
+    "Need help?": "Cần trợ giúp?",
+    "Contact Support": "Liên hệ hỗ trợ",
+    "Additional Information": "Thông tin bổ sung",
+    "If you have any questions or need assistance, please contact": "Nếu bạn có câu hỏi hoặc cần hỗ trợ, vui lòng liên hệ",
+    "Hello :name": "Xin chào :name",
+    "You have received a new message from": "Bạn đã nhận được tin nhắn mới từ",
+    "Reply to :name": "Trả lời :name",
+    "This message was sent via your organizer contact form.": "Tin nhắn này được gửi qua biểu mẫu liên hệ nhà tổ chức của bạn.",
+    "Your email confirmation code is:": "Mã xác nhận email của bạn là:"
 }
