--- a/backend/lang/zh-cn.json
+++ b/backend/lang/zh-cn.json
@@ -419,5 +419,76 @@
     "Total Service Fee": "总服务费",
     "Total Amount": "总金额",
     "For any queries, please contact us at": "如有任何疑问，请联系我们：",
-    "Tax Information": "税务信息"
+    "Tax Information": "税务信息",
+    "Sales Ascending": "销售升序",
+    "Sales Descending": "销售降序",
+    "Revenue Ascending": "收入升序",
+    "Revenue Descending": "收入降序",
+    "Social": "社交",
+    "Food & Drink": "美食美酒",
+    "Charity": "慈善",
+    "Music": "音乐",
+    "Art": "艺术",
+    "Comedy": "喜剧",
+    "Theater": "戏剧",
+    "Business": "商务",
+    "Tech": "科技",
+    "Education": "教育",
+    "Workshop": "研讨会",
+    "Sports": "体育",
+    "Festival": "节日",
+    "Nightlife": "夜生活",
+    "Other": "其他",
+    "Name": "姓名",
+    "Code": "代码",
+    "Total Sales": "总销售额",
+    "Total Sales Gross": "总销售毛额",
+    "Updated At": "更新于",
+    "Question": "问题",
+    "Answer": "答案",
+    "Order ID": "订单ID",
+    "Order Email": "订单邮箱",
+    "Attendee Name": "参与者姓名",
+    "Attendee Email": "参与者邮箱",
+    "Product": "产品",
+    "Order URL": "订单URL",
+    "Attendee Answers": "参与者回答",
+    "Order Name": "订单名称",
+    "Order Answers": "订单回答",
+    "Product Answers": "产品回答",
+    "Payment Provider": "支付提供商",
+    "Invalid invite token": "无效的邀请令牌",
+    "Affiliate not found": "未找到推广员",
+    "Organizer with ID :organizerId is not live and user is not authenticated": "ID为:organizerId的主办方未上线且用户未认证",
+    "Message sent successfully": "消息发送成功",
+    "Your email has been successfully verified!": "您的邮箱已成功验证！",
+    "The image must be at least 600 pixels wide and 50 pixels tall, and no more than 4000 pixels wide and 4000 pixels tall.": "图片必须至少600像素宽和50像素高，且不超过4000像素宽和4000像素高。",
+    "The image must be at least :minWidth x :minHeight pixels.": "图片必须至少:minWidth x :minHeight像素。",
+    "The entity ID is required when type is provided.": "提供类型时实体ID是必需的。",
+    "The type is required when entity ID is provided.": "提供实体ID时类型是必需的。",
+    "Your confirmation code for :app_name is :code": "您在:app_name的确认码是:code",
+    "New message from :name": "来自:name的新消息",
+    "An affiliate with this code already exists for this event": "此活动已存在使用该代码的推广员",
+    "New password must be different from the old password.": "新密码必须与旧密码不同。",
+    "Due to issues with spam, you must contact us to enable your account for sending messages. ' .\n                    'Please contact us at :email": "由于垃圾邮件问题，您必须联系我们以启用您的账户发送消息功能。请通过:email联系我们",
+    "Sorry, is expired or not in a valid state.": "抱歉，已过期或不在有效状态。",
+    "Organizer not found": "未找到主办方",
+    "You must verify your account before you can update an organizer\\'s status.\n                You can resend the confirmation by visiting your profile page.": "您必须先验证账户才能更新主办方状态。您可以通过访问个人资料页面重新发送确认。",
+    "Your email address has already been verified.": "您的邮箱地址已经验证过了。",
+    "The verification code is invalid or has expired.": "验证码无效或已过期。",
+    "Job not found": "未找到任务",
+    "Export file not found": "未找到导出文件",
+    "Job completed successfully": "任务成功完成",
+    "Job is still in progress": "任务仍在进行中",
+    "Email Subject": "邮件主题",
+    "© :year :app_name. All rights reserved.": "© :year :app_name。保留所有权利。",
+    "Need help?": "需要帮助？",
+    "Contact Support": "联系支持",
+    "Additional Information": "附加信息",
+    "If you have any questions or need assistance, please contact": "如有任何问题或需要帮助，请联系",
+    "Hello :name": "你好 :name",
+    "You have received a new message from": "您收到了新消息，来自",
+    "Reply to :name": "回复 :name",
+    "This message was sent via your organizer contact form.": "此消息通过您的主办方联系表单发送。",
+    "Your email confirmation code is:": "您的邮箱确认码是："
 }
