--- a/backend/lang/zh-hk.json
+++ b/backend/lang/zh-hk.json
@@ -419,5 +419,76 @@
     "Total Service Fee": "總服務費",
     "Total Amount": "總金額",
     "For any queries, please contact us at": "如有任何疑問，請聯繫我們：",
-    "Tax Information": "税務信息"
+    "Tax Information": "税務信息",
+    "Sales Ascending": "銷售升序",
+    "Sales Descending": "銷售降序",
+    "Revenue Ascending": "收入升序",
+    "Revenue Descending": "收入降序",
+    "Social": "社交",
+    "Food & Drink": "飲食",
+    "Charity": "慈善",
+    "Music": "音樂",
+    "Art": "藝術",
+    "Comedy": "喜劇",
+    "Theater": "劇場",
+    "Business": "商務",
+    "Tech": "科技",
+    "Education": "教育",
+    "Workshop": "工作坊",
+    "Sports": "體育",
+    "Festival": "節慶",
+    "Nightlife": "夜生活",
+    "Other": "其他",
+    "Name": "名稱",
+    "Code": "代碼",
+    "Total Sales": "總銷售額",
+    "Total Sales Gross": "總銷售毛額",
+    "Updated At": "更新於",
+    "Question": "問題",
+    "Answer": "答案",
+    "Order ID": "訂單ID",
+    "Order Email": "訂單電郵",
+    "Attendee Name": "參加者姓名",
+    "Attendee Email": "參加者電郵",
+    "Product": "產品",
+    "Order URL": "訂單URL",
+    "Attendee Answers": "參加者回答",
+    "Order Name": "訂單名稱",
+    "Order Answers": "訂單回答",
+    "Product Answers": "產品回答",
+    "Payment Provider": "付款供應商",
+    "Invalid invite token": "無效嘅邀請令牌",
+    "Affiliate not found": "搵唔到推廣夥伴",
+    "Organizer with ID :organizerId is not live and user is not authenticated": "ID為:organizerId嘅主辦方未上線而且用戶未認證",
+    "Message sent successfully": "訊息發送成功",
+    "Your email has been successfully verified!": "你嘅電郵已經成功驗證！",
+    "The image must be at least 600 pixels wide and 50 pixels tall, and no more than 4000 pixels wide and 4000 pixels tall.": "圖片必須至少600像素闊同50像素高，而且唔可以超過4000像素闊同4000像素高。",
+    "The image must be at least :minWidth x :minHeight pixels.": "圖片必須至少:minWidth x :minHeight像素。",
+    "The entity ID is required when type is provided.": "提供類型時實體ID係必需嘅。",
+    "The type is required when entity ID is provided.": "提供實體ID時類型係必需嘅。",
+    "Your confirmation code for :app_name is :code": "你喺:app_name嘅確認碼係:code",
+    "New message from :name": "來自:name嘅新訊息",
+    "An affiliate with this code already exists for this event": "呢個活動已經有用呢個代碼嘅推廣夥伴",
+    "New password must be different from the old password.": "新密碼必須同舊密碼唔同。",
+    "Due to issues with spam, you must contact us to enable your account for sending messages. ' .\n                    'Please contact us at :email": "由於垃圾郵件問題，你必須聯絡我哋嚟啟用你嘅帳戶發送訊息功能。請透過:email聯絡我哋",
+    "Sorry, is expired or not in a valid state.": "唔好意思，已經過期或者唔喺有效狀態。",
+    "Organizer not found": "搵唔到主辦方",
+    "You must verify your account before you can update an organizer\\'s status.\n                You can resend the confirmation by visiting your profile page.": "你必須先驗證帳戶先可以更新主辦方狀態。你可以透過訪問個人資料頁面重新發送確認。",
+    "Your email address has already been verified.": "你嘅電郵地址已經驗證咗。",
+    "The verification code is invalid or has expired.": "驗證碼無效或者已經過期。",
+    "Job not found": "搵唔到任務",
+    "Export file not found": "搵唔到匯出檔案",
+    "Job completed successfully": "任務成功完成",
+    "Job is still in progress": "任務仲進行緊",
+    "Email Subject": "電郵主題",
+    "© :year :app_name. All rights reserved.": "© :year :app_name。保留所有權利。",
+    "Need help?": "需要幫助？",
+    "Contact Support": "聯絡支援",
+    "Additional Information": "附加資料",
+    "If you have any questions or need assistance, please contact": "如有任何問題或需要協助，請聯絡",
+    "Hello :name": "你好 :name",
+    "You have received a new message from": "你收到咗新訊息，來自",
+    "Reply to :name": "回覆 :name",
+    "This message was sent via your organizer contact form.": "呢個訊息係透過你嘅主辦方聯絡表格發送。",
+    "Your email confirmation code is:": "你嘅電郵確認碼係："
 }
